force-app/main/default/objects/Advisor_Term__c/Advisor_Term__c.object-meta.xml
<CustomObject>
    <description>Represents a term of an official GFW advisor</description>
    <label>Advisor Term</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Advisor Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisor Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>