force-app/main/default/objects/Advisor_Term__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <description>Parent advisor of this advisor term</description>
    <inlineHelpText>Parent advisor of this advisor term</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Advisor Terms</relationshipLabel>
    <relationshipName>Advisor_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>