force-app/main/default/objects/Advisor_Term__c/fields/Box_URL__c.field-meta.xml
<CustomField>
    <fullName>Box_URL__c</fullName>
    <description>URL for this advisor term&apos;s folder on Box</description>
    <inlineHelpText>URL for this advisor term&apos;s folder on Box</inlineHelpText>
    <label>Box URL</label>
    <type>Url</type>
</CustomField>