force-app/main/default/objects/Advisor_Term__c/fields/Contract_signer_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_signer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact record representing the second signer (co-signer) for this advisor term (if any)</description>
    <inlineHelpText>The contact record representing the second signer (co-signer) for this advisor term (if any)</inlineHelpText>
    <label>Contract signer 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advisor Terms (Contract signer 2)</relationshipLabel>
    <relationshipName>Advisor_Terms1</relationshipName>
    <type>Lookup</type>
</CustomField>