force-app/main/default/objects/Advisor_Term__c/fields/Contract_signer__c.field-meta.xml
<CustomField>
    <fullName>Contract_signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact linked to the advisor&apos;s account who is the designated contract signer</description>
    <inlineHelpText>The contact linked to the advisor&apos;s account who is the designated contract signer</inlineHelpText>
    <label>Contract signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advisor Terms</relationshipLabel>
    <relationshipName>Advisor_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>