force-app/main/default/objects/Advisor_Term__c/fields/Current_payment_method__c.field-meta.xml
<CustomField>
    <fullName>Current_payment_method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current payment method used for this advisor term</description>
    <inlineHelpText>Current payment method used for this advisor term</inlineHelpText>
    <label>Current payment method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Advisor Terms (Current payment method)</relationshipLabel>
    <relationshipName>Advisor_Terms1</relationshipName>
    <type>Lookup</type>
</CustomField>