force-app/main/default/objects/Advisor_Term__c/fields/Date_accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_accepted__c</fullName>
    <description>The date on which the invitation to serve the given advisor term was accepted</description>
    <inlineHelpText>The date on which the invitation to serve the given advisor term was accepted</inlineHelpText>
    <label>Date accepted</label>
    <type>Date</type>
</CustomField>