force-app/main/default/objects/Advisor_Term__c/fields/Date_auto_reminders_paused__c.field-meta.xml
<CustomField>
    <fullName>Date_auto_reminders_paused__c</fullName>
    <description>The date on which automated reminder and overdue letters for pending endorsements linked to this advisor term were suspended</description>
    <inlineHelpText>The date on which automated reminder and overdue letters for pending endorsements linked to this advisor term were suspended</inlineHelpText>
    <label>Date auto-reminders paused</label>
    <type>Date</type>
</CustomField>