force-app/main/default/objects/Advisor_Term__c/fields/Date_commitment_letter_received__c.field-meta.xml
<CustomField>
    <fullName>Date_commitment_letter_received__c</fullName>
    <description>Date received for the letter from the advisor commiting to be an official GFW advisor</description>
    <inlineHelpText>Date received for the letter from the advisor commiting to be an official GFW advisor</inlineHelpText>
    <label>Date commitment letter received</label>
    <type>Date</type>
</CustomField>