force-app/main/default/objects/Advisor_Term__c/fields/Date_commitment_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_commitment_letter_sent__c</fullName>
    <description>Date sent for the letter committing to be an official GFW advisor</description>
    <inlineHelpText>Date sent for the letter committing to be an official GFW advisor</inlineHelpText>
    <label>Date commitment letter sent</label>
    <type>Date</type>
</CustomField>