force-app/main/default/objects/Advisor_Term__c/fields/Date_declined__c.field-meta.xml
<CustomField>
    <fullName>Date_declined__c</fullName>
    <description>The date on which the invitation to serve the given advisor term was declined</description>
    <inlineHelpText>The date on which the invitation to serve the given advisor term was declined</inlineHelpText>
    <label>Date declined</label>
    <type>Date</type>
</CustomField>