force-app/main/default/objects/Advisor_Term__c/fields/Date_invite_response_received__c.field-meta.xml
<CustomField>
    <fullName>Date_invite_response_received__c</fullName>
    <description>The date on which we received a response to the invitation letter for this advisor term</description>
    <inlineHelpText>The date on which we received a response to the invitation letter for this advisor term</inlineHelpText>
    <label>Date invite response received</label>
    <type>Date</type>
</CustomField>