force-app/main/default/objects/Advisor_Term__c/fields/Date_invited__c.field-meta.xml
<CustomField>
    <fullName>Date_invited__c</fullName>
    <description>The date on which the advisor was invited to serve according to this term - auto-populated when invitation letter is sent</description>
    <inlineHelpText>The date on which the advisor was invited to serve according to this term - auto-populated when invitation letter is sent</inlineHelpText>
    <label>Date invited</label>
    <type>Date</type>
</CustomField>