force-app/main/default/objects/Advisor_Term__c/fields/Date_OFAC_checked__c.field-meta.xml
<CustomField>
    <fullName>Date_OFAC_checked__c</fullName>
    <description>Date of last OFAC check for the advisor name</description>
    <inlineHelpText>Date of last OFAC check for the advisor name</inlineHelpText>
    <label>Date OFAC checked</label>
    <type>Date</type>
</CustomField>