force-app/main/default/objects/Advisor_Term__c/fields/Date_payment_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_payment_sent__c</fullName>
    <description>Repeating field for dates payments sent</description>
    <inlineHelpText>Repeating field for dates payments sent</inlineHelpText>
    <label>Date payment sent</label>
    <type>Date</type>
</CustomField>