force-app/main/default/objects/Advisor_Term__c/fields/Date_stipend_accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_stipend_accepted__c</fullName>
    <description>The date on which the Advisor accepted to receive a stipend for this term</description>
    <inlineHelpText>The date on which the Advisor accepted to receive a stipend for this term</inlineHelpText>
    <label>Date stipend accepted</label>
    <type>Date</type>
</CustomField>