force-app/main/default/objects/Advisor_Term__c/fields/Date_term_begins__c.field-meta.xml
<CustomField>
    <fullName>Date_term_begins__c</fullName>
    <description>For official advisors, when their term begins</description>
    <inlineHelpText>For official advisors, when their term begins</inlineHelpText>
    <label>Date term begins</label>
    <type>Date</type>
</CustomField>