force-app/main/default/objects/Advisor_Term__c/fields/Date_term_ends__c.field-meta.xml
<CustomField>
    <fullName>Date_term_ends__c</fullName>
    <description>For official advisors, when their term ends</description>
    <inlineHelpText>For official advisors, when their term ends</inlineHelpText>
    <label>Date term ends</label>
    <type>Date</type>
</CustomField>