force-app/main/default/objects/Advisor_Term__c/fields/Date_VP_approved__c.field-meta.xml
<CustomField>
    <fullName>Date_VP_approved__c</fullName>
    <description>Date on which VP approved advisor engagement and stipend, if any</description>
    <inlineHelpText>Date on which VP approved advisor engagement and stipend, if any</inlineHelpText>
    <label>Date VP approved</label>
    <type>Date</type>
</CustomField>