force-app/main/default/objects/Advisor_Term__c/fields/External_type__c.field-meta.xml
<CustomField>
    <fullName>External_type__c</fullName>
    <description>Type of this advisor term for display at the advisor community site</description>
    <formula>IF(RecordType.Name = &quot;Assessor&quot; &amp;&amp; TEXT(Type__c) &lt;&gt; &quot;Reference&quot;, 
 TEXT(Type__c) &amp; &quot; &quot; &amp; RecordType.Name,
 RecordType.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Type of this advisor term for display at the advisor community site</inlineHelpText>
    <label>External type</label>
    <type>Text</type>
</CustomField>