force-app/main/default/objects/Advisor_Term__c/fields/First_payment_method__c.field-meta.xml
<CustomField>
    <fullName>First_payment_method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first submitted payment method linked to this advisor term</description>
    <inlineHelpText>The first submitted payment method linked to this advisor term</inlineHelpText>
    <label>First payment method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Advisor Terms</relationshipLabel>
    <relationshipName>Advisor_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>