force-app/main/default/objects/Advisor_Term__c/fields/GM_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>GM_ExternalID__c</fullName>
    <description>ID from external database</description>
    <externalId>true</externalId>
    <inlineHelpText>ID from external database</inlineHelpText>
    <label>GM ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>