force-app/main/default/objects/Advisor_Term__c/fields/Highlights__c.field-meta.xml
<CustomField>
    <fullName>Highlights__c</fullName>
    <description>Highlighted notes for this advisor term</description>
    <inlineHelpText>Highlighted notes for this advisor term</inlineHelpText>
    <label>Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>