force-app/main/default/objects/Advisor_Term__c/fields/Org_advisor__c.field-meta.xml
<CustomField>
    <fullName>Org_advisor__c</fullName>
    <description>Checked if the advisor for this term is an org rather than an individual</description>
    <formula>Advisor__r.Account__r.RecordType.Name &lt;&gt; &quot;Household GM Advisor&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the advisor for this term is an org rather than an individual</inlineHelpText>
    <label>Org advisor</label>
    <type>Checkbox</type>
</CustomField>