force-app/main/default/objects/Advisor_Term__c/fields/Payment_amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_amount__c</fullName>
    <description>Repeating field for amount of each payment</description>
    <inlineHelpText>Repeating field for amount of each payment</inlineHelpText>
    <label>Payment amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>