force-app/main/default/objects/Advisor_Term__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <description>Method of payment for this term</description>
    <inlineHelpText>Method of payment for this term</inlineHelpText>
    <label>Payment method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>