force-app/main/default/objects/Advisor_Term__c/fields/Payment_recent__c.field-meta.xml
<CustomField>
    <fullName>Payment_recent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most recent linked active payment</description>
    <inlineHelpText>The most recent linked active payment</inlineHelpText>
    <label>Payment recent</label>
    <referenceTo>Advisor_Payment__c</referenceTo>
    <relationshipLabel>Advisor Terms</relationshipLabel>
    <relationshipName>Advisor_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>