force-app/main/default/objects/Advisor_Term__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For &quot;View Forms&quot; advisor terms, this portfolio contains the proposals/accounts to be shared with the advisor</description>
    <inlineHelpText>For &quot;View Forms&quot; advisor terms, this portfolio contains the proposals/accounts to be shared with the advisor</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Advisor Terms</relationshipLabel>
    <relationshipName>Advisor_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>