force-app/main/default/objects/Advisor_Term__c/fields/Red_flag_Other_non_black_list__c.field-meta.xml
<CustomField>
    <fullName>Red_flag_Other_non_black_list__c</fullName>
    <description>Checked if the advisor&apos;s account has been marked with the &quot;Other non-black list&quot; red flag</description>
    <formula>Advisor__r.Account__r.Red_flag_Other_non_black_list__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the advisor&apos;s account has been marked with the &quot;Other non-black list&quot; red flag</inlineHelpText>
    <label>Red flag: Other (non black-list)</label>
    <type>Checkbox</type>
</CustomField>