force-app/main/default/objects/Advisor_Term__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of this advisor term</description>
    <formula>IF ( NOT(ISBLANK(Date_declined__c)), &quot;0 Declined&quot;,
IF (
 AND( 
  NOT(ISBLANK(Date_term_ends__c)),
  Date_term_ends__c &lt; TODAY()
 ), &quot;10 Completed&quot;,
IF (
 OR(
  TEXT(Type__c) = &quot;Reference&quot;, 
  NOT(ISBLANK(Date_accepted__c))
 ), &quot;6 Active&quot;,
IF (NOT(ISBLANK(Date_invited__c)), &quot;2 Invited&quot;, 
&quot;1 Pending&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of this advisor term</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>