force-app/main/default/objects/Advisor_Term__c/fields/Status_external__c.field-meta.xml
<CustomField>
    <fullName>Status_external__c</fullName>
    <description>External status of this advisor term (the version that is viewed by the advisor)</description>
    <formula>IF (CONTAINS(Status__c, &quot; &quot;),
 TRIM(RIGHT(Status__c, LEN(Status__c) - FIND(&quot; &quot;, Status__c))),
 Status__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>External status of this advisor term (the version that is viewed by the advisor)</inlineHelpText>
    <label>Status external</label>
    <type>Text</type>
</CustomField>