force-app/main/default/objects/Advisor_Term__c/fields/Stipend_response__c.field-meta.xml
<CustomField>
    <fullName>Stipend_response__c</fullName>
    <description>Advisor&apos;s response (accept or decline) to the offer of a stipend</description>
    <inlineHelpText>Advisor&apos;s response (accept or decline) to the offer of a stipend</inlineHelpText>
    <label>Stipend response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Accept_Decline</valueSetName>
    </valueSet>
</CustomField>