force-app/main/default/objects/Advisor_Term__c/fields/To_be_paid__c.field-meta.xml
<CustomField>
    <fullName>To_be_paid__c</fullName>
    <description>Difference between payment amount and net amount paid to date</description>
    <formula>Payment_amount__c - Paid_to_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between payment amount and net amount paid to date</inlineHelpText>
    <label>To be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>