force-app/main/default/objects/Advisor_Term__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this advisor term, that is, the role of the advisor for the duration of this advisor term. Normally populated on acceptance.</description>
    <inlineHelpText>The type of this advisor term, that is, the role of the advisor for the duration of this advisor term. Normally populated on acceptance.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Advisor_term_types</valueSetName>
    </valueSet>
</CustomField>