force-app/main/default/objects/Advisor_Term__c/fields/Type_invited__c.field-meta.xml
<CustomField>
    <fullName>Type_invited__c</fullName>
    <description>The advisor type for this advisor term&apos;s invitation letter</description>
    <inlineHelpText>The advisor type for this advisor term&apos;s invitation letter</inlineHelpText>
    <label>Type invited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Advisor_term_types</valueSetName>
    </valueSet>
</CustomField>