force-app/main/default/objects/Advisor_Term__c/fields/Website_mention_response__c.field-meta.xml
<CustomField>
    <fullName>Website_mention_response__c</fullName>
    <description>Does the advisor permit us to mention them on our website</description>
    <inlineHelpText>Does the advisor permit us to mention them on our website</inlineHelpText>
    <label>Website mention response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Accept_Decline</valueSetName>
    </valueSet>
</CustomField>