force-app/main/default/objects/Advisor_Term__c/recordTypes/Assessor.recordType-meta.xml
<RecordType>
    <fullName>Assessor</fullName>
    <active>true</active>
    <description>An advisor term during which assessments may be requested from the advisor</description>
    <label>Assessor</label>
</RecordType>