force-app/main/default/objects/Advisor_Term__c/recordTypes/Endorser.recordType-meta.xml
<RecordType>
    <fullName>Endorser</fullName>
    <active>true</active>
    <description>An advisor term during which endorsements may be requested from the advisor</description>
    <label>Endorser</label>
</RecordType>