force-app/main/default/objects/Advisor_Term__c/validationRules/DateTermBeginsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DateTermBeginsRequired</fullName>
    <active>true</active>
    <description>New advisor terms must have non-blank Date Term Begins.</description>
    <errorConditionFormula>AND(
 ISNEW(),
 ISBLANK(Date_term_begins__c)
)</errorConditionFormula>
    <errorDisplayField>Date_term_begins__c</errorDisplayField>
    <errorMessage>New advisor terms must have non-blank Date Term Begins.</errorMessage>
</ValidationRule>