force-app/main/default/objects/Advisor_Term__c/validationRules/PortfolioRequiredForAssessors.validationRule-meta.xml
<ValidationRule>
    <fullName>PortfolioRequiredForAssessors</fullName>
    <active>false</active>
    <description>Assessor advisor terms must have an assigned portfolio</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &quot;Assessor&quot;,
 ISBLANK(Portfolio__c)
)</errorConditionFormula>
    <errorDisplayField>Portfolio__c</errorDisplayField>
    <errorMessage>Assessor advisor terms must have an assigned portfolio</errorMessage>
</ValidationRule>