force-app/main/default/objects/Advisor_Term__c/validationRules/SingleActiveEndorserTerm.validationRule-meta.xml
<ValidationRule>
    <fullName>SingleActiveAssessorTerm</fullName>
    <active>true</active>
    <description>This advisor already has an active assessor term.</description>
    <errorConditionFormula>AND(
 ISNEW(),
 NOT(ISBLANK(Advisor__r.Current_assessor_term__c)),
 RecordType.Name = &apos;Assessor&apos;
)</errorConditionFormula>
    <errorMessage>This advisor already has an active assessor term.</errorMessage>
</ValidationRule>