force-app/main/default/objects/Advisor_Term__c/validationRules/TypeRequiredWhenTermAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeRequiredWhenTermAccepted</fullName>
    <active>true</active>
    <description>The Type field must be entered if the Date accepted is non-blank</description>
    <errorConditionFormula>AND( 
 NOT(ISBLANK(Date_accepted__c)), 
 ISBLANK(TEXT(Type__c)) 
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>The Type field must be entered if the Date accepted is non-blank</errorMessage>
</ValidationRule>