force-app/main/default/objects/Advisor_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Advisor__c</columns>
    <columns>Date_term_begins__c</columns>
    <columns>Date_term_ends__c</columns>
    <columns>Date_commitment_letter_received__c</columns>
    <columns>Date_payment_sent__c</columns>
    <columns>Payment_amount__c</columns>
    <columns>Payment_method__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>