force-app/main/default/objects/Advisor_Term__c/listViews/All_Endorser_Terms.listView-meta.xml
<ListView>
    <fullName>All_Endorser_Terms</fullName>
    <columns>NAME</columns>
    <columns>Advisor__c</columns>
    <columns>Date_term_begins__c</columns>
    <columns>Date_term_ends__c</columns>
    <columns>Date_commitment_letter_received__c</columns>
    <columns>Date_payment_sent__c</columns>
    <columns>Payment_amount__c</columns>
    <columns>Payment_method__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advisor_Term__c.Endorser</value>
    </filters>
    <label>All - Endorser Terms</label>
</ListView>